feedly.css
/* ... */
div.fatalError button {
	margin-top : 5px;
}

div.fatalError textarea {
	width : 100%;
	height : 100px;
}

/* @899 */
.dijitDialog .dijitToolbar {
	border : 1px solid #c0c0c0;
}

/* @940 */
ul#filterDlg_Matches, ul#filterDlg_Actions {
	max-height : 100px;
	overflow : auto;
	list-style-type : none;
	border-style : solid;
  	border-color : #c0c0c0;
	border-width : 0px 1px 1px 1px;
	background-color : #ecf4ff;
	margin : 0px 0px 5px 0px;
	padding : 0px;
	box-shadow : inset 0px 0px 2px rgba(0,0,0,0.1);
}

ul#filterDlg_Matches li, ul#filterDlg_Actions li {
	cursor : pointer;
	padding : 0px 0px 0px 5px;
}

ul#filterDlg_Matches li div.dijitCheckBox, ul#filterDlg_Actions li div.dijitCheckBox {
	margin-right : 5px;
}

ul.helpKbList {
	max-height : 300px;
	overflow : auto;
	list-style-type : none;
	border : 1px solid #c0c0c0;
	background-color : #ecf4ff;
	margin : 0px 0px 5px 0px;
	padding : 5px;
	border-radius : 4px;
	box-shadow : inset 0px 0px 2px rgba(0,0,0,0.1);
}

ul.helpKbList span.hksequence {
	width : 6em;
	margin-left : 20px;
	color : #88b0f0;
	font-weight : bold;
	display : inline-block;
}

ul.helpKbList h2 {
	margin-top : 0px;
}

/* @1029 */
select.attachments {
	display : block;
	margin-top : 10px;
	max-width : 120px;
}


/* RESET ************************************************************/

html {
	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
}
:focus {
	outline: none;
}
input[type="search"] {
	-webkit-appearance: none;
}
textarea {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}
.claro .dijitBorderContainer,
.claro .dijitSplitContainer-dijitContentPane,
.claro .dijitBorderContainer-dijitContentPane {
	padding: 0;
}
img,
.claro .dijitSplitContainer-child,
.claro .dijitBorderContainer-child {
	border: 0;
}


/* BASE LAYOUT ************************************************************/

#ttrssMain,
#ttrssPrefs {
	overflow: hidden;
}
#main {
	width: auto;
}
#main-toolbar {
	display: table;
	width: 100%;
}
#main_toolbar_form,
.actionChooser {
	display: table-cell;
	white-space: nowrap;
}
.actionChooser {
	text-align: right;
}
#headlines-toolbar_splitter,
#toolbar_splitter {
	display: none;
}
img.feedIcon,
img.tinyFeedIcon  {
	width: 16px;
	height: 16px;
}


/* SKINNING ************************************************************/

html {
	color: #444;
}
a {
	color: #6b3;
	text-decoration: none;
}
a:hover {
	text-decoration: underline;
}
.claro .dlgButtons .dijitButton .dijitButtonNode,
.claro .dijitDialog [align] .dijitButton .dijitButtonNode {
	padding: 4px 6px 5px;
	font-weight: bold;
}


/* STYLING ************************************************************/

.dijitBorderContainer,
.dijitBorderContainerNoGutter {
	overflow: visible;
}
#ttrssMain #main {
	padding: 0 30px;
}
#main-toolbar {
	padding: 4px 0 5px;
	border: 0;
}
/* status icons */
#main-toolbar .actionChooser > .dijitButton .dijitButtonNode {
	padding: 0;
}
#main,
#feeds-holder,
#main-toolbar,
#main #headlines-wrap-inner .dijitSplitter {
	background: #eee;
}
#main .dijitSplitterHover,
#main .dijitSplitterActive {
	background: transparent;
}
#main .dijitSplitterThumb {
	display: none;
}

#main #content-wrap .dijitSelect,
#main #content-wrap .dijitButtonContents,
#main #content-wrap .dijitButtonNode,
#main #content-wrap .dijitArrowButton {
	border-color: transparent;
	background-color: transparent;
	color: #999;
	box-shadow: none;
	transition: color .2s;
}
#main #content-wrap .dijitSelectHover .dijitButtonContents,
#main #content-wrap .dijitDropDownButtonHover .dijitButtonContents,
#main #content-wrap .dijitComboButton .dijitButtonContents:hover,
#main #content-wrap .dijitOpened .dijitButtonContents {
	color: #444;
}
#main #content-wrap .dijitComboButton .dijitArrowButton {
	border-left: none;
}
#main #content-wrap .dijitComboButton .dijitButtonText {
	padding: 0;
}
#main #headlines-toolbar .dijitButtonContents {
	color: #aaa;
}
#main_toolbar_form > * {
	margin-right: 5px;
}

#overlay {
	position: absolute;
	z-index: 100;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	text-align: center;
	background: #fff;
}
#overlay:before {
	content: "";
	height: 90%;
}
#overlay:before,
#overlay_inner {
	display: inline-block;
	vertical-align: middle;
}
#overlay_inner .insensitive {
	margin: 0 0 20px;
}
#overlay_inner .dijitProgressBar {
	margin: -10px 0;
	border: 1px solid #d8d8d8;
}
#overlay_inner .dijitProgressBarFull {
	border: 0;
}
#overlay_inner .dijitProgressBarTile {
	background: #e5e5e5;
}
#overlay_inner .dijitProgressBarLabel {
	color: #444;
	font-weight: bold;
}
.labelColorIndicator,
.labelColorIndicator2,
.hlLabelRef {
	display: inline-block;
	border-radius: 99px;
	background-color: #fec;
	color: #444;
	font-weight: bold;
}
.labelColorIndicator,
.labelColorIndicator2 {
	width: 13px;
	height: 13px;
	border: 1px solid rgba(0,0,0,.1);
	font-size: 10px;
	line-height: 1;
	text-align: center;
}
.hlLabelRef {
	margin-right: 5px;
	border: 1px solid rgba(0,0,0,.06);
	padding: 0 4px;
	font-size: 9px;
	line-height: 1;
}
.author:not(:empty) + span .hlLabelRef:first-child {
	margin-left: 5px;
}

/* feed tree */
#ttrssMain #main_toolbar_form > .dijitButton {
	display: block !important;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	width: 30px;
}
#ttrssMain #main_toolbar_form > .dijitButton .dijitButtonNode {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	border-radius: 0;
	border: 0;
	background: transparent;
	box-shadow: none;
	transition: background .5s;
}
#ttrssMain #main_toolbar_form > .dijitButton .dijitButtonContents {
	position: absolute;
	top: 51px;
	left: 8px;
	padding: 0;
	width: 16px;
	height: 16px;
	overflow: hidden;
	text-indent: 101%;
	background: transparent url("feedly/icons.png") 0 -16px no-repeat;
	background-size: 176px 32px;
	opacity: .2;
	transition: opacity .2s;
}
#ttrssMain #main_toolbar_form > .dijitButton:hover .dijitButtonNode {
	background: rgba(0,0,0,.05);
}
#ttrssMain #main_toolbar_form > .dijitButton:hover .dijitButtonContents {
	opacity: .7;
}
/* ... */

